# maubot-webhook-plugin

./: README.md  base-config.yaml  maubot.yaml  pyproject.toml  requirements.txt  xyz.maubot.webhook.mbp
webhook/: __init__.py  bot.py  db.py  migrations.py
