[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maubot-webhook"
version = "1.0.0"
description = "A maubot plugin for webhook integration"
authors = [
    {name = "Webhook Plugin Developer"},
]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "maubot>=0.3.0",
    "aiohttp>=3.8.0",
]

[project.urls]
Repository = "https://github.com/maubot/webhook"